--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,9 @@
 
 <div class="container">
     <div class="spacing-20"></div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+    {% verbatim %}
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbarApp">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,21 +30,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">岗位列表 <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                <li class="nav-item" v-for="(item, index) in navbarList" :key="index" :class="{active : active == item.name}" @click="selectNavbar(item.name)">
+                    <a class="nav-link" :href="item.url">{{ item.name }}</a>
                 </li>
             </ul>
         </div>
+
     </nav>
+    {% endverbatim %}
 
     <div>
         {% block content %}
@@ -55,5 +50,6 @@
     {% block other_script %}
         其他js文件放这
     {% endblock %}
+<script src="/static/js/navbar.js" type="text/javascript"></script>
 </body>
 </html>
